TP 4 - SSL/obj/tp4.output
Terminals unused in grammar

   PALABRA_RESERVADA
   CONSTANTE_REAL
   MAYORIGUAL


Rules useless in parser due to conflicts

   21 operador: MASIGUAL


Estado 3 conflictos: 1 desplazamiento/reducción, 2 reducción/reducción
Estado 55 conflictos: 4 reducción(ones)/reducción(ones)
Estado 74 conflictos: 12 reducción(ones)/reducción(ones)
Estado 126 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 149 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input line

    3 line: '\n'
    4     | exp '\n'
    5     | declaracion '\n'
    6     | definicionDeFuncion '\n'
    7     | sentencia '\n'
    8     | error '\n'

    9 exp: expGeneral
   10    | error

   11 expGeneral: expUnaria
   12           | expUnaria operador expGeneral

   13 operador: '='
   14         | MASIGUAL
   15         | OR
   16         | AND
   17         | IGUALIGUAL
   18         | DISTINTO
   19         | '<'
   20         | '>'
   21         | MASIGUAL
   22         | MENORIGUAL
   23         | '+'
   24         | '-'
   25         | '*'
   26         | '/'
   27         | '%'

   28 expUnaria: expSufijo
   29          | INCREMENTO expUnaria
   30          | DECREMENTO expUnaria
   31          | operadorUnario expUnaria
   32          | SIZEOF expUnaria
   33          | SIZEOF '(' TIPO_DATO ')'

   34 operadorUnario: '&'
   35               | '*'
   36               | '!'

   37 expSufijo: expPrimaria
   38          | expSufijo '[' exp ']'
   39          | expSufijo '(' listaArgumentos ')'
   40          | expSufijo '.' IDENTIFICADOR
   41          | expSufijo FLECHA IDENTIFICADOR
   42          | expSufijo INCREMENTO
   43          | expSufijo DECREMENTO

   44 listaArgumentos: exp
   45                | listaArgumentos ',' exp
   46                | /* vacío */

   47 expPrimaria: IDENTIFICADOR
   48            | CCARACTER
   49            | STRING
   50            | NUM
   51            | '(' exp ')'
   52            | error

   53 declaracion: TIPO_DATO IDENTIFICADOR parametros

   54 parametros: '(' listaDeParametros ')'
   55           | '(' ')'

   56 listaDeParametros: parametro
   57                  | listaDeParametros ',' parametro

   58 parametro: TIPO_DATO
   59          | TIPO_DATO IDENTIFICADOR
   60          | error IDENTIFICADOR
   61          | TIPO_DATO error

   62 cuerpo: ';'
   63       | sentenciaCompuesta
   64       | '{' error '}'
   65       | error

   66 definicionDeFuncion: TIPO_DATO IDENTIFICADOR parametros cuerpo
   67                    | error IDENTIFICADOR parametros cuerpo
   68                    | TIPO_DATO error parametros cuerpo

   69 sentencia: sentenciaCompuesta
   70          | sentenciaExpresion
   71          | sentenciaSeleccion
   72          | sentenciaIteracion
   73          | sentenciaSalto

   74 sentenciaCompuesta: '{' listaDeDeclaracionesOP listaSentenciasOP '}'

   75 listaDeDeclaracionesOP: /* vacío */
   76                       | listaDeDeclaraciones

   77 listaDeDeclaraciones: declaracion
   78                     | listaDeDeclaraciones declaracion

   79 listaSentenciasOP: /* vacío */
   80                  | listaSentencias

   81 listaSentencias: sentencia
   82                | listaSentencias sentencia

   83 sentenciaExpresion: expOP ';'

   84 expOP: /* vacío */
   85      | exp

   86 sentenciaSeleccion: IF '(' exp ')' sentencia
   87                   | IF '(' exp ')' sentencia ELSE sentencia
   88                   | SWITCH '(' IDENTIFICADOR ')' sentencia

   89 sentenciaIteracion: WHILE '(' exp ')' sentencia
   90                   | DO sentencia WHILE '(' exp ')'
   91                   | FOR '(' expOP ';' expOP ';' expOP ')' sentencia

   92 sentenciaSalto: CONTINUE ';'
   93               | BREAK ';'
   94               | RETURN expOP ';'
   95               | GOTO IDENTIFICADOR ';'


Terminales con las reglas donde aparecen

$end (0) 0
'\n' (10) 3 4 5 6 7 8
'!' (33) 36
'%' (37) 27
'&' (38) 34
'(' (40) 33 39 51 54 55 86 87 88 89 90 91
')' (41) 33 39 51 54 55 86 87 88 89 90 91
'*' (42) 25 35
'+' (43) 23
',' (44) 45 57
'-' (45) 24
'.' (46) 40
'/' (47) 26
';' (59) 62 83 91 92 93 94 95
'<' (60) 19
'=' (61) 13
'>' (62) 20
'[' (91) 38
']' (93) 38
'{' (123) 64 74
'}' (125) 64 74
error (256) 8 10 52 60 61 64 65 67 68
NUM (258) 50
IDENTIFICADOR (259) 40 41 47 53 59 60 66 67 88 95
TIPO_DATO (260) 33 53 58 59 61 66 68
PALABRA_RESERVADA (261)
STRING (262) 49
CCARACTER (263) 48
CONSTANTE_REAL (264)
MAYORIGUAL (265)
MENORIGUAL (266) 22
IGUALIGUAL (267) 17
DISTINTO (268) 18
INCREMENTO (269) 29 42
DECREMENTO (270) 30 43
FLECHA (271) 41
OR (272) 15
AND (273) 16
MASIGUAL (274) 14 21
SIZEOF (275) 32 33
IF (276) 86 87
ELSE (277) 87
SWITCH (278) 88
WHILE (279) 89 90
DO (280) 90
CONTINUE (281) 92
BREAK (282) 93
RETURN (283) 94
FOR (284) 91
GOTO (285) 95


No terminales con las reglas donde aparecen

$accept (51)
    en la izquierda: 0
input (52)
    en la izquierda: 1 2, en la derecha: 0 2
line (53)
    en la izquierda: 3 4 5 6 7 8, en la derecha: 2
exp (54)
    en la izquierda: 9 10, en la derecha: 4 38 44 45 51 85 86 87 89
    90
expGeneral (55)
    en la izquierda: 11 12, en la derecha: 9 12
operador (56)
    en la izquierda: 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27,
    en la derecha: 12
expUnaria (57)
    en la izquierda: 28 29 30 31 32 33, en la derecha: 11 12 29 30
    31 32
operadorUnario (58)
    en la izquierda: 34 35 36, en la derecha: 31
expSufijo (59)
    en la izquierda: 37 38 39 40 41 42 43, en la derecha: 28 38 39
    40 41 42 43
listaArgumentos (60)
    en la izquierda: 44 45 46, en la derecha: 39 45
expPrimaria (61)
    en la izquierda: 47 48 49 50 51 52, en la derecha: 37
declaracion (62)
    en la izquierda: 53, en la derecha: 5 77 78
parametros (63)
    en la izquierda: 54 55, en la derecha: 53 66 67 68
listaDeParametros (64)
    en la izquierda: 56 57, en la derecha: 54 57
parametro (65)
    en la izquierda: 58 59 60 61, en la derecha: 56 57
cuerpo (66)
    en la izquierda: 62 63 64 65, en la derecha: 66 67 68
definicionDeFuncion (67)
    en la izquierda: 66 67 68, en la derecha: 6
sentencia (68)
    en la izquierda: 69 70 71 72 73, en la derecha: 7 81 82 86 87 88
    89 90 91
sentenciaCompuesta (69)
    en la izquierda: 74, en la derecha: 63 69
listaDeDeclaracionesOP (70)
    en la izquierda: 75 76, en la derecha: 74
listaDeDeclaraciones (71)
    en la izquierda: 77 78, en la derecha: 76 78
listaSentenciasOP (72)
    en la izquierda: 79 80, en la derecha: 74
listaSentencias (73)
    en la izquierda: 81 82, en la derecha: 80 82
sentenciaExpresion (74)
    en la izquierda: 83, en la derecha: 70
expOP (75)
    en la izquierda: 84 85, en la derecha: 83 91 94
sentenciaSeleccion (76)
    en la izquierda: 86 87 88, en la derecha: 71
sentenciaIteracion (77)
    en la izquierda: 89 90 91, en la derecha: 72
sentenciaSalto (78)
    en la izquierda: 92 93 94 95, en la derecha: 73


estado 0

    0 $accept: . input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


estado 1

    0 $accept: input . $end
    2 input: input . line

    $end           desplazar e ir al estado 2
    error          desplazar e ir al estado 3
    NUM            desplazar e ir al estado 4
    IDENTIFICADOR  desplazar e ir al estado 5
    TIPO_DATO      desplazar e ir al estado 6
    STRING         desplazar e ir al estado 7
    CCARACTER      desplazar e ir al estado 8
    INCREMENTO     desplazar e ir al estado 9
    DECREMENTO     desplazar e ir al estado 10
    SIZEOF         desplazar e ir al estado 11
    IF             desplazar e ir al estado 12
    SWITCH         desplazar e ir al estado 13
    WHILE          desplazar e ir al estado 14
    DO             desplazar e ir al estado 15
    CONTINUE       desplazar e ir al estado 16
    BREAK          desplazar e ir al estado 17
    RETURN         desplazar e ir al estado 18
    FOR            desplazar e ir al estado 19
    GOTO           desplazar e ir al estado 20
    '\n'           desplazar e ir al estado 21
    '*'            desplazar e ir al estado 22
    '('            desplazar e ir al estado 23
    '&'            desplazar e ir al estado 24
    '!'            desplazar e ir al estado 25
    '{'            desplazar e ir al estado 26

    ';'  reduce usando la regla 84 (expOP)

    line                 ir al estado 27
    exp                  ir al estado 28
    expGeneral           ir al estado 29
    expUnaria            ir al estado 30
    operadorUnario       ir al estado 31
    expSufijo            ir al estado 32
    expPrimaria          ir al estado 33
    declaracion          ir al estado 34
    definicionDeFuncion  ir al estado 35
    sentencia            ir al estado 36
    sentenciaCompuesta   ir al estado 37
    sentenciaExpresion   ir al estado 38
    expOP                ir al estado 39
    sentenciaSeleccion   ir al estado 40
    sentenciaIteracion   ir al estado 41
    sentenciaSalto       ir al estado 42


estado 2

    0 $accept: input $end .

    $default  aceptar


estado 3

    8 line: error . '\n'
   10 exp: error .
   52 expPrimaria: error .
   67 definicionDeFuncion: error . IDENTIFICADOR parametros cuerpo

    IDENTIFICADOR  desplazar e ir al estado 43
    '\n'           desplazar e ir al estado 44

    '\n'      [reduce usando la regla 10 (exp)]
    '\n'      [reduce usando la regla 52 (expPrimaria)]
    ';'       reduce usando la regla 10 (exp)
    ';'       [reduce usando la regla 52 (expPrimaria)]
    $default  reduce usando la regla 52 (expPrimaria)


estado 4

   50 expPrimaria: NUM .

    $default  reduce usando la regla 50 (expPrimaria)


estado 5

   47 expPrimaria: IDENTIFICADOR .

    $default  reduce usando la regla 47 (expPrimaria)


estado 6

   53 declaracion: TIPO_DATO . IDENTIFICADOR parametros
   66 definicionDeFuncion: TIPO_DATO . IDENTIFICADOR parametros cuerpo
   68                    | TIPO_DATO . error parametros cuerpo

    error          desplazar e ir al estado 45
    IDENTIFICADOR  desplazar e ir al estado 46


estado 7

   49 expPrimaria: STRING .

    $default  reduce usando la regla 49 (expPrimaria)


estado 8

   48 expPrimaria: CCARACTER .

    $default  reduce usando la regla 48 (expPrimaria)


estado 9

   29 expUnaria: INCREMENTO . expUnaria

    error          desplazar e ir al estado 47
    NUM            desplazar e ir al estado 4
    IDENTIFICADOR  desplazar e ir al estado 5
    STRING         desplazar e ir al estado 7
    CCARACTER      desplazar e ir al estado 8
    INCREMENTO     desplazar e ir al estado 9
    DECREMENTO     desplazar e ir al estado 10
    SIZEOF         desplazar e ir al estado 11
    '*'            desplazar e ir al estado 22
    '('            desplazar e ir al estado 23
    '&'            desplazar e ir al estado 24
    '!'            desplazar e ir al estado 25

    expUnaria       ir al estado 48
    operadorUnario  ir al estado 31
    expSufijo       ir al estado 32
    expPrimaria     ir al estado 33


estado 10

   30 expUnaria: DECREMENTO . expUnaria

    error          desplazar e ir al estado 47
    NUM            desplazar e ir al estado 4
    IDENTIFICADOR  desplazar e ir al estado 5
    STRING         desplazar e ir al estado 7
    CCARACTER      desplazar e ir al estado 8
    INCREMENTO     desplazar e ir al estado 9
    DECREMENTO     desplazar e ir al estado 10
    SIZEOF         desplazar e ir al estado 11
    '*'            desplazar e ir al estado 22
    '('            desplazar e ir al estado 23
    '&'            desplazar e ir al estado 24
    '!'            desplazar e ir al estado 25

    expUnaria       ir al estado 49
    operadorUnario  ir al estado 31
    expSufijo       ir al estado 32
    expPrimaria     ir al estado 33


estado 11

   32 expUnaria: SIZEOF . expUnaria
   33          | SIZEOF . '(' TIPO_DATO ')'

    error          desplazar e ir al estado 47
    NUM            desplazar e ir al estado 4
    IDENTIFICADOR  desplazar e ir al estado 5
    STRING         desplazar e ir al estado 7
    CCARACTER      desplazar e ir al estado 8
    INCREMENTO     desplazar e ir al estado 9
    DECREMENTO     desplazar e ir al estado 10
    SIZEOF         desplazar e ir al estado 11
    '*'            desplazar e ir al estado 22
    '('            desplazar e ir al estado 50
    '&'            desplazar e ir al estado 24
    '!'            desplazar e ir al estado 25

    expUnaria       ir al estado 51
    operadorUnario  ir al estado 31
    expSufijo       ir al estado 32
    expPrimaria     ir al estado 33


estado 12

   86 sentenciaSeleccion: IF . '(' exp ')' sentencia
   87                   | IF . '(' exp ')' sentencia ELSE sentencia

    '('  desplazar e ir al estado 52


estado 13

   88 sentenciaSeleccion: SWITCH . '(' IDENTIFICADOR ')' sentencia

    '('  desplazar e ir al estado 53


estado 14

   89 sentenciaIteracion: WHILE . '(' exp ')' sentencia

    '('  desplazar e ir al estado 54


estado 15

   90 sentenciaIteracion: DO . sentencia WHILE '(' exp ')'

    error          desplazar e ir al estado 55
    NUM            desplazar e ir al estado 4
    IDENTIFICADOR  desplazar e ir al estado 5
    STRING         desplazar e ir al estado 7
    CCARACTER      desplazar e ir al estado 8
    INCREMENTO     desplazar e ir al estado 9
    DECREMENTO     desplazar e ir al estado 10
    SIZEOF         desplazar e ir al estado 11
    IF             desplazar e ir al estado 12
    SWITCH         desplazar e ir al estado 13
    WHILE          desplazar e ir al estado 14
    DO             desplazar e ir al estado 15
    CONTINUE       desplazar e ir al estado 16
    BREAK          desplazar e ir al estado 17
    RETURN         desplazar e ir al estado 18
    FOR            desplazar e ir al estado 19
    GOTO           desplazar e ir al estado 20
    '*'            desplazar e ir al estado 22
    '('            desplazar e ir al estado 23
    '&'            desplazar e ir al estado 24
    '!'            desplazar e ir al estado 25
    '{'            desplazar e ir al estado 26

    ';'  reduce usando la regla 84 (expOP)

    exp                 ir al estado 56
    expGeneral          ir al estado 29
    expUnaria           ir al estado 30
    operadorUnario      ir al estado 31
    expSufijo           ir al estado 32
    expPrimaria         ir al estado 33
    sentencia           ir al estado 57
    sentenciaCompuesta  ir al estado 37
    sentenciaExpresion  ir al estado 38
    expOP               ir al estado 39
    sentenciaSeleccion  ir al estado 40
    sentenciaIteracion  ir al estado 41
    sentenciaSalto      ir al estado 42


estado 16

   92 sentenciaSalto: CONTINUE . ';'

    ';'  desplazar e ir al estado 58


estado 17

   93 sentenciaSalto: BREAK . ';'

    ';'  desplazar e ir al estado 59


estado 18

   94 sentenciaSalto: RETURN . expOP ';'

    error          desplazar e ir al estado 55
    NUM            desplazar e ir al estado 4
    IDENTIFICADOR  desplazar e ir al estado 5
    STRING         desplazar e ir al estado 7
    CCARACTER      desplazar e ir al estado 8
    INCREMENTO     desplazar e ir al estado 9
    DECREMENTO     desplazar e ir al estado 10
    SIZEOF         desplazar e ir al estado 11
    '*'            desplazar e ir al estado 22
    '('            desplazar e ir al estado 23
    '&'            desplazar e ir al estado 24
    '!'            desplazar e ir al estado 25

    ';'  reduce usando la regla 84 (expOP)

    exp             ir al estado 56
    expGeneral      ir al estado 29
    expUnaria       ir al estado 30
    operadorUnario  ir al estado 31
    expSufijo       ir al estado 32
    expPrimaria     ir al estado 33
    expOP           ir al estado 60


estado 19

   91 sentenciaIteracion: FOR . '(' expOP ';' expOP ';' expOP ')' sentencia

    '('  desplazar e ir al estado 61


estado 20

   95 sentenciaSalto: GOTO . IDENTIFICADOR ';'

    IDENTIFICADOR  desplazar e ir al estado 62


estado 21

    3 line: '\n' .

    $default  reduce usando la regla 3 (line)


estado 22

   35 operadorUnario: '*' .

    $default  reduce usando la regla 35 (operadorUnario)


estado 23

   51 expPrimaria: '(' . exp ')'

    error          desplazar e ir al estado 55
    NUM            desplazar e ir al estado 4
    IDENTIFICADOR  desplazar e ir al estado 5
    STRING         desplazar e ir al estado 7
    CCARACTER      desplazar e ir al estado 8
    INCREMENTO     desplazar e ir al estado 9
    DECREMENTO     desplazar e ir al estado 10
    SIZEOF         desplazar e ir al estado 11
    '*'            desplazar e ir al estado 22
    '('            desplazar e ir al estado 23
    '&'            desplazar e ir al estado 24
    '!'            desplazar e ir al estado 25

    exp             ir al estado 63
    expGeneral      ir al estado 29
    expUnaria       ir al estado 30
    operadorUnario  ir al estado 31
    expSufijo       ir al estado 32
    expPrimaria     ir al estado 33


estado 24

   34 operadorUnario: '&' .

    $default  reduce usando la regla 34 (operadorUnario)


estado 25

   36 operadorUnario: '!' .

    $default  reduce usando la regla 36 (operadorUnario)


estado 26

   74 sentenciaCompuesta: '{' . listaDeDeclaracionesOP listaSentenciasOP '}'

    TIPO_DATO  desplazar e ir al estado 64

    $default  reduce usando la regla 75 (listaDeDeclaracionesOP)

    declaracion             ir al estado 65
    listaDeDeclaracionesOP  ir al estado 66
    listaDeDeclaraciones    ir al estado 67


estado 27

    2 input: input line .

    $default  reduce usando la regla 2 (input)


estado 28

    4 line: exp . '\n'
   85 expOP: exp .

    '\n'  desplazar e ir al estado 68

    $default  reduce usando la regla 85 (expOP)


estado 29

    9 exp: expGeneral .

    $default  reduce usando la regla 9 (exp)


estado 30

   11 expGeneral: expUnaria .
   12           | expUnaria . operador expGeneral

    MENORIGUAL  desplazar e ir al estado 69
    IGUALIGUAL  desplazar e ir al estado 70
    DISTINTO    desplazar e ir al estado 71
    OR          desplazar e ir al estado 72
    AND         desplazar e ir al estado 73
    MASIGUAL    desplazar e ir al estado 74
    '='         desplazar e ir al estado 75
    '<'         desplazar e ir al estado 76
    '>'         desplazar e ir al estado 77
    '+'         desplazar e ir al estado 78
    '-'         desplazar e ir al estado 79
    '*'         desplazar e ir al estado 80
    '/'         desplazar e ir al estado 81
    '%'         desplazar e ir al estado 82

    $default  reduce usando la regla 11 (expGeneral)

    operador  ir al estado 83


estado 31

   31 expUnaria: operadorUnario . expUnaria

    error          desplazar e ir al estado 47
    NUM            desplazar e ir al estado 4
    IDENTIFICADOR  desplazar e ir al estado 5
    STRING         desplazar e ir al estado 7
    CCARACTER      desplazar e ir al estado 8
    INCREMENTO     desplazar e ir al estado 9
    DECREMENTO     desplazar e ir al estado 10
    SIZEOF         desplazar e ir al estado 11
    '*'            desplazar e ir al estado 22
    '('            desplazar e ir al estado 23
    '&'            desplazar e ir al estado 24
    '!'            desplazar e ir al estado 25

    expUnaria       ir al estado 84
    operadorUnario  ir al estado 31
    expSufijo       ir al estado 32
    expPrimaria     ir al estado 33


estado 32

   28 expUnaria: expSufijo .
   38 expSufijo: expSufijo . '[' exp ']'
   39          | expSufijo . '(' listaArgumentos ')'
   40          | expSufijo . '.' IDENTIFICADOR
   41          | expSufijo . FLECHA IDENTIFICADOR
   42          | expSufijo . INCREMENTO
   43          | expSufijo . DECREMENTO

    INCREMENTO  desplazar e ir al estado 85
    DECREMENTO  desplazar e ir al estado 86
    FLECHA      desplazar e ir al estado 87
    '('         desplazar e ir al estado 88
    '['         desplazar e ir al estado 89
    '.'         desplazar e ir al estado 90

    $default  reduce usando la regla 28 (expUnaria)


estado 33

   37 expSufijo: expPrimaria .

    $default  reduce usando la regla 37 (expSufijo)


estado 34

    5 line: declaracion . '\n'

    '\n'  desplazar e ir al estado 91


estado 35

    6 line: definicionDeFuncion . '\n'

    '\n'  desplazar e ir al estado 92


estado 36

    7 line: sentencia . '\n'

    '\n'  desplazar e ir al estado 93


estado 37

   69 sentencia: sentenciaCompuesta .

    $default  reduce usando la regla 69 (sentencia)


estado 38

   70 sentencia: sentenciaExpresion .

    $default  reduce usando la regla 70 (sentencia)


estado 39

   83 sentenciaExpresion: expOP . ';'

    ';'  desplazar e ir al estado 94


estado 40

   71 sentencia: sentenciaSeleccion .

    $default  reduce usando la regla 71 (sentencia)


estado 41

   72 sentencia: sentenciaIteracion .

    $default  reduce usando la regla 72 (sentencia)


estado 42

   73 sentencia: sentenciaSalto .

    $default  reduce usando la regla 73 (sentencia)


estado 43

   67 definicionDeFuncion: error IDENTIFICADOR . parametros cuerpo

    '('  desplazar e ir al estado 95

    parametros  ir al estado 96


estado 44

    8 line: error '\n' .

    $default  reduce usando la regla 8 (line)


estado 45

   68 definicionDeFuncion: TIPO_DATO error . parametros cuerpo

    '('  desplazar e ir al estado 95

    parametros  ir al estado 97


estado 46

   53 declaracion: TIPO_DATO IDENTIFICADOR . parametros
   66 definicionDeFuncion: TIPO_DATO IDENTIFICADOR . parametros cuerpo

    '('  desplazar e ir al estado 95

    parametros  ir al estado 98


estado 47

   52 expPrimaria: error .

    $default  reduce usando la regla 52 (expPrimaria)


estado 48

   29 expUnaria: INCREMENTO expUnaria .

    $default  reduce usando la regla 29 (expUnaria)


estado 49

   30 expUnaria: DECREMENTO expUnaria .

    $default  reduce usando la regla 30 (expUnaria)


estado 50

   33 expUnaria: SIZEOF '(' . TIPO_DATO ')'
   51 expPrimaria: '(' . exp ')'

    error          desplazar e ir al estado 55
    NUM            desplazar e ir al estado 4
    IDENTIFICADOR  desplazar e ir al estado 5
    TIPO_DATO      desplazar e ir al estado 99
    STRING         desplazar e ir al estado 7
    CCARACTER      desplazar e ir al estado 8
    INCREMENTO     desplazar e ir al estado 9
    DECREMENTO     desplazar e ir al estado 10
    SIZEOF         desplazar e ir al estado 11
    '*'            desplazar e ir al estado 22
    '('            desplazar e ir al estado 23
    '&'            desplazar e ir al estado 24
    '!'            desplazar e ir al estado 25

    exp             ir al estado 63
    expGeneral      ir al estado 29
    expUnaria       ir al estado 30
    operadorUnario  ir al estado 31
    expSufijo       ir al estado 32
    expPrimaria     ir al estado 33


estado 51

   32 expUnaria: SIZEOF expUnaria .

    $default  reduce usando la regla 32 (expUnaria)


estado 52

   86 sentenciaSeleccion: IF '(' . exp ')' sentencia
   87                   | IF '(' . exp ')' sentencia ELSE sentencia

    error          desplazar e ir al estado 55
    NUM            desplazar e ir al estado 4
    IDENTIFICADOR  desplazar e ir al estado 5
    STRING         desplazar e ir al estado 7
    CCARACTER      desplazar e ir al estado 8
    INCREMENTO     desplazar e ir al estado 9
    DECREMENTO     desplazar e ir al estado 10
    SIZEOF         desplazar e ir al estado 11
    '*'            desplazar e ir al estado 22
    '('            desplazar e ir al estado 23
    '&'            desplazar e ir al estado 24
    '!'            desplazar e ir al estado 25

    exp             ir al estado 100
    expGeneral      ir al estado 29
    expUnaria       ir al estado 30
    operadorUnario  ir al estado 31
    expSufijo       ir al estado 32
    expPrimaria     ir al estado 33


estado 53

   88 sentenciaSeleccion: SWITCH '(' . IDENTIFICADOR ')' sentencia

    IDENTIFICADOR  desplazar e ir al estado 101


estado 54

   89 sentenciaIteracion: WHILE '(' . exp ')' sentencia

    error          desplazar e ir al estado 55
    NUM            desplazar e ir al estado 4
    IDENTIFICADOR  desplazar e ir al estado 5
    STRING         desplazar e ir al estado 7
    CCARACTER      desplazar e ir al estado 8
    INCREMENTO     desplazar e ir al estado 9
    DECREMENTO     desplazar e ir al estado 10
    SIZEOF         desplazar e ir al estado 11
    '*'            desplazar e ir al estado 22
    '('            desplazar e ir al estado 23
    '&'            desplazar e ir al estado 24
    '!'            desplazar e ir al estado 25

    exp             ir al estado 102
    expGeneral      ir al estado 29
    expUnaria       ir al estado 30
    operadorUnario  ir al estado 31
    expSufijo       ir al estado 32
    expPrimaria     ir al estado 33


estado 55

   10 exp: error .
   52 expPrimaria: error .

    ')'       reduce usando la regla 10 (exp)
    ')'       [reduce usando la regla 52 (expPrimaria)]
    ']'       reduce usando la regla 10 (exp)
    ']'       [reduce usando la regla 52 (expPrimaria)]
    ','       reduce usando la regla 10 (exp)
    ','       [reduce usando la regla 52 (expPrimaria)]
    ';'       reduce usando la regla 10 (exp)
    ';'       [reduce usando la regla 52 (expPrimaria)]
    $default  reduce usando la regla 52 (expPrimaria)


estado 56

   85 expOP: exp .

    $default  reduce usando la regla 85 (expOP)


estado 57

   90 sentenciaIteracion: DO sentencia . WHILE '(' exp ')'

    WHILE  desplazar e ir al estado 103


estado 58

   92 sentenciaSalto: CONTINUE ';' .

    $default  reduce usando la regla 92 (sentenciaSalto)


estado 59

   93 sentenciaSalto: BREAK ';' .

    $default  reduce usando la regla 93 (sentenciaSalto)


estado 60
